--- a/style.css
+++ b/style.css
@@ -12,6 +12,10 @@ html {
     scroll-behavior: smooth;
 }
 
+body{
+    max-width: 100vw;
+}
+
 header {
     width: 100vw;
     background-color: black;
@@ -148,9 +152,18 @@ section div#div-img {
 
 section div#div-img img {
     height: 100px;
+    padding-left: 100px;
+    margin-top: 15px;
 }
 section div#div-img h1{
-    font-size: 2.4em;
+    font-size: 2em;
     font-weight: 400;
     margin-left: 45px;
+}
+section div#div-text {
+    height: 100vh;
+    background-color: #cccccc8a;
+    margin: 25px 100px 20px 100px;
+    padding-bottom: 500px;
+    border-radius: 5px;
 }
